# hello

./: CMakeLists.txt  test.txt
src/battery_charger_service/: battery.cpp  battery.h  battery_dbus.cpp  battery_dbus.h  charger.cpp  charger.h  dbus_generate_server.c  dbus_generate_server.h  dbus_server.cpp  dbus_server.h  log.cpp  service.cpp
src/tools/: CMakeCache.txt  CMakeLists.txt  Makefile  charger_cmd.cpp  cmake_install.cmake  dbus_client.cpp  dbus_client.h  dbus_generate_client.c  dbus_generate_client.h
systemd/: charger.service  org.philips.charger_battery.conf
sysvinit/: charger-service
xml/: dbus.xml
